--- a/CommentReplacement/CommentReplacement.csproj
+++ b/CommentReplacement/CommentReplacement.csproj
@@ -56,6 +56,9 @@
     <None Include="Files\test.docx">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="Files\testT.docx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
