Improved translation modified tag precision

--- a/CommentReplacement/CommentReplacement.csproj
+++ b/CommentReplacement/CommentReplacement.csproj
@@ -53,6 +53,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Files\FSS1 - Securities Settlement Preperation - extraction 20160713 - Remove FR - OVA.docx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="Files\Virements internationaux extr. 20160801 - Remove FR - OVA.docx">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
