Added comments and project specific readme

--- a/CommentReplacement/CommentReplacement.csproj
+++ b/CommentReplacement/CommentReplacement.csproj
@@ -48,15 +48,13 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="readme.md" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="Files\FSS1 - Securities Settlement Preperation - extraction 20160713 - Remove FR - OVA.docx">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="Files\Virements internationaux extr. 20160801 - Remove FR - OVA.docx">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="packages.config" />
